<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/root_layout_padding"
    tools:context="net.shreygupta.musicplayer.NowPlayingActivity">

    <TextView
        style="@style/description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/nowPlayingDescription" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="5"
        android:contentDescription="@string/albumart_desc"
        android:scaleType="fitXY"
        android:src="@drawable/something_just_like_this" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:contentDescription="@string/now_playing_action_icon_desc1"
            android:src="@drawable/ic_shuffle_black_48dp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/current_song"
            android:textAlignment="center"
            android:textSize="20sp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".25"
            android:contentDescription="@string/now_playing_action_icon_desc2"
            android:src="@drawable/ic_repeat_black_48dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_weight="1">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/now_playing_action_icon_desc3"
            android:src="@drawable/ic_skip_previous_black_48dp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/now_playing_action_icon_desc4"
            android:src="@drawable/ic_play_arrow_black_48dp" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/now_playing_action_icon_desc5"
            android:src="@drawable/ic_skip_next_black_48dp" />

    </LinearLayout>

</LinearLayout>