<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/root_layout_padding"
    tools:context="net.shreygupta.musicplayer.AlbumsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/description"
            android:text="@string/albumsDescription" />

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/albumTitle1"
                    style="@style/album"
                    android:text="@string/albumName" />

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/albumTitle1"
                    android:text="@string/artistName" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignTop="@+id/textView1"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/albums_img_desc"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_album_black_48dp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/albumTitle2"
                    style="@style/album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/albumName" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/albumTitle2"
                    android:text="@string/artistName" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignTop="@+id/textView2"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/albums_img_desc"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_album_black_48dp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/albumTitle3"
                    style="@style/album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/albumName" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/albumTitle3"
                    android:text="@string/artistName" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignTop="@+id/textView3"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/albums_img_desc"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_album_black_48dp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/albumTitle4"
                    style="@style/album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/albumName" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/albumTitle4"
                    android:text="@string/artistName" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignTop="@+id/textView4"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/albums_img_desc"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_album_black_48dp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            card_view:cardCornerRadius="2dp"
            card_view:cardElevation="8dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">

                <TextView
                    android:id="@+id/albumTitle5"
                    style="@style/album"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/albumName" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/albumTitle5"
                    android:text="@string/artistName" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignTop="@+id/textView5"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/albums_img_desc"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_album_black_48dp" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>